force-app/main/default/objects/Benefit__c/fields/Annuity_Monthly_Payout_Gross__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Monthly_Payout_Gross__c</fullName>
    <formula>Annuity_Value__c / (30 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total value of the government annuity</inlineHelpText>
    <label>Annuity Monthly Payout (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>