force-app/main/default/objects/Benefit__c/fields/Annuity_Monthly_Payout_Net__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Monthly_Payout_Net__c</fullName>
    <formula>Annuity_Monthly_Payout_Gross__c -  (Health_Insurance_Cost__c /12) -  (Health_Insurance_Cost__c /12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annuity Monthly Payout (Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>