force-app/main/default/objects/Benefit__c/fields/Annuity_Value__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Value__c</fullName>
    <label>Annuity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>