force-app/main/default/objects/Benefit__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>