force-app/main/default/objects/Benefit__c/fields/Health_Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Cost__c</fullName>
    <label>Yearly Health Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>