force-app/main/default/objects/Benefit__c/fields/Life_Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Cost__c</fullName>
    <label>Yearly Life Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>